--- a/www/templates/viewbesties.html
+++ b/www/templates/viewbesties.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{name}}">
-  <ion-content scroll="false">
+  <ion-content>
     
     <div class="row">
         <div class="col colviewbestiesimage">
