--- a/www/templates/viewinmap.html
+++ b/www/templates/viewinmap.html
@@ -1,5 +1,5 @@
 <ion-view view-title="PID In Map">
-  	<ion-content scroll="false">
+  	<ion-content>
     	<div id="map" data-tap-disabled="true"></div>
     </ion-content>
     <ion-footer-bar class="bar-dark">
