--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -21,9 +21,9 @@
         <div class="col">
           <div class="item item-avatar">
             <img src="img/ionic.png" class="animated fadeIn" width="50" height="50"><!--  ng-click="viewbesties('Marty McFly')" -->
-            <h2><b>Marty McFly</b> 
-            <a href="#/app/viewbesties:{{'Marty McFly'}}"><span class="icon ion-eye"></span></a></h2>
-            <p>2m ago, Nov 05,'55</p>
+            <a href="#/app/viewbesties:{{'Marty McFly'}}"><h2><b>Marty McFly</b>  
+            <i class="icon ion-eye"></i></h2></a>
+            <a href="#/app/viewbesties:{{'Marty McFly'}}"><p>2m ago, Nov 05,'55</p></a>
           </div>
         </div>
         <div class="col" style="text-align:right;">
@@ -57,8 +57,8 @@
         <div class="col">
           <div class="item item-avatar">
             <img src="img/ionic.png" class="animated fadeIn"><!--  ng-click="viewbesties('Helery Watson')" -->
-            <h2><b>Helery Watson</b> <a href="#/app/viewbesties:{{'Helery Watson'}}"><span class="icon ion-eye"></span></a></h2>
-            <p>2m ago, Nov 05,'55</p>
+            <a href="#/app/viewbesties:{{'Marty McFly'}}"><h2><b>Helery Watson</b>  <span class="icon ion-eye"></span></h2></a>
+            <a href="#/app/viewbesties:{{'Marty McFly'}}"><p>2m ago, Nov 05,'55</p></a>
 
           </div>
         </div>
