--- a/www/css/style.css
+++ b/www/css/style.css
@@ -474,6 +474,13 @@ a.hover{
   color: #000;
 }
 
+/*anchor tag*/
+a{
+  text-decoration: none;
+}
+a:hover{
+  text-decoration: none;
+}
 
 
 /*floating button bottom right*/
