--- a/www/css/style.css
+++ b/www/css/style.css
@@ -292,10 +292,12 @@ hr#ionviewbestiesdivider{
 }
 
 /*google map*/
-#map {
+/*#map {
   width: 100%;
   height: 100%;
 }
+body { margin:0; padding:0; }*/
+#map { position:absolute; top:0; bottom:0; width:100%; }
 /*#map {
     height: 100%;
     margin: 0;
