--- a/www/css/login.css
+++ b/www/css/login.css
@@ -157,6 +157,7 @@
 .thirddivbtngo1{
 	background-color: #699cfa;
   margin: 40%;
+  vertical-align: center;
   padding-bottom: 20%;
   background: none;
   text-align: center;
