--- a/www/css/stylelogin.css
+++ b/www/css/stylelogin.css
@@ -2,7 +2,7 @@
   padding: 0;
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   background-color: #b7edf1;
 }
 .DivM1list{
