--- a/www/css/stylelogin.css
+++ b/www/css/stylelogin.css
@@ -3,34 +3,7 @@
   width: 100%;
   height: 100%;
   position: absolute;
-  background-color: #b7edf1;
-}
-.DivM1list{
-  margin-right: 20%;
-  margin-left:  20%;
-}
-.DivM1 h1{
-  padding-top: 25%;
-}
-.DivM1list{
-  padding-top: 25%;
-}
-/*.DivM1 .DivM1button{
-  bottom: 0;
-  position: relative;
-  margin: 20%;
-}*/
-.DivM1button{
-  left: 20%;
-  right: 20%;
-  position: absolute;
-  padding-bottom: 25%;
-  margin-top: 25%;
-}
-label.item.item-input.item-floating-label.la1 {
-    border-top: black;
-    border-top-left-radius: 30%;
-    border-top-right-radius: 30%;
+  background-color: #699cfa;
 }
 .DivM2 .DivM2button,.DivM3 .DivM3button,.DivM4 .DivM4button,.DivM5 .DivM5button{
   bottom: 0;
@@ -53,4 +26,255 @@ button.button.DivM2buttonElement,.DivM3buttonEle,.DivM4buttonEle,.DivM5buttonEle
     border-bottom-left-radius: 90%;
     border-bottom-right-radius: 90%;
     border-bottom: 20%;
+}
+input::-webkit-input-placeholder {
+color: #f4aa10 !important;
+}
+ 
+input:-moz-placeholder { /* Firefox 18- */
+color: #f4aa10 !important;  
+}
+ 
+input::-moz-placeholder {  /* Firefox 19+ */
+color: #f4aa10 !important;  
+}
+ 
+input:-ms-input-placeholder {  
+color: #f4aa10 !important;  
+}
+/************************ Div 1 ***********************/
+.DivM1list{
+  margin-right: 10%;
+  margin-left:  10%;
+}
+.DivM1 p{
+  padding-top: 25%;
+  word-spacing: 4%;
+  letter-spacing: 4%;
+}
+.DivM1list{
+  padding-top: 25%;
+}
+/*.DivM1 .DivM1button{
+  bottom: 0;
+  position: relative;
+  margin: 20%;
+}*/
+.DivM1button{
+  left: 20%;
+  right: 20%;
+  position: absolute;
+  padding-bottom: 25%;
+  margin-top: 25%;
+}
+label.item.item-input.item-floating-label.la1 {
+    border-top: black;
+    border-top-left-radius: 30%;
+    border-top-right-radius: 30%;
+}
+.fybp1{
+  font-size: 32px;
+  font-weight: 500;
+  animation-delay: 1.2s;
+  -webkit-animation-duration:2.0s;
+  animation-duration:2.0s;
+  -webkit-animation-iteration-count: 1;
+  -webkit-animation-fill-mode: both; 
+}
+.worldimagelogin{
+  margin-top: 10%;
+  width: 250px;
+  height: 250px;
+  animation-delay: 3.0s;
+  -webkit-animation-duration:1.2s;
+  animation-duration: 1.2s;
+}
+
+/************************ Div 2 ***********************/
+.fybpcontact{
+  font-size: 40px;
+  font-weight: 500;
+  margin: 15%;
+  animation-delay: 0.1s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+.fybpcontacth2{
+  font-size: 30px;
+  font-weight: 500;
+  animation-delay: 0.9s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+label.item.item-input.item-floating-label.text-center.CNtdlabel {
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 25%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-color: #699cfa;
+    border-bottom-color: darkblue;
+    animation-delay: 1.8s;
+    -webkit-animation-duration:1.0s;
+    animation-duration:1.0s;
+}
+.thirddivinput {
+    text-align: center;
+}
+button.btngo2 {
+    background: none;
+    border-radius: 50px;
+    background-image: url(../img/go1.png);
+    background-repeat: no-repeat;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin-top: 20%;
+    margin-top: 20%;
+    width: 20%;
+    height: 80px;
+    /*border-color: black;*/
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;
+    /*background: url("../img/go1.png");
+    border-radius: 50px;
+    margin-top: 20%;
+    margin-top: 20%;
+    width: 2px;
+    height: 2px;
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;*/
+}
+
+/************************ Div 3 ***********************/
+.fybpotp{
+  font-size: 35px;
+  font-weight: 500;
+  margin: 15%;
+  animation-delay: 0.1s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+label.item.item-input.item-floating-label.la2 {
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 25%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-color: #699cfa;
+    border-bottom-color: darkblue;
+    animation-delay: 1.8s;
+    -webkit-animation-duration:1.0s;
+    animation-duration:1.0s;
+}
+button.btngo3 {
+    background: none;
+    border-radius: 50px;
+    /*margin-top: 20%;
+    margin-top: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;*/
+    background-image: url(../img/go1.png);
+    background-repeat: no-repeat;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin-top: 20%;
+    margin-top: 20%;
+    width: 20%;
+    height: 80px;
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;
+}
+.otptxtdivinput {
+    text-align: center;
+}
+
+/************************ Div 4 ***********************/
+.fybplogin{
+  font-size: 35px;
+  font-weight: 500;
+  margin: 15%;
+  animation-delay: 0.1s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+label.item.item-input.item-floating-label.la4 {
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 20%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
+    border-color: #699cfa;
+    border-bottom-color: darkblue;
+    animation-delay: 1.8s;
+    -webkit-animation-duration:1.0s;
+    animation-duration:1.0s;
+}
+button.btngo4 {
+    background: none;
+    border-radius: 10px;
+    /*margin-top: 20%;
+    margin-top: 20%;
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;*/
+    background-image: url(../img/go5.png);
+    background-repeat: no-repeat;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    margin-top: 20%;
+    margin-top: 20%;
+    width: 20%;
+    height: 80px;
+    /*padding-bottom: 5%;*/
+    margin-left: 40%;
+    margin-right: 40%;
+    align-self: center;
+    text-align: center;
+}
+.sdrp{
+  font-size: 15px;
+  font-weight: 500;
+  margin: 5%;
+  animation-delay: 0.1s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+.sdr1,.sdr2{
+  width: 100%;
+  height: 100%;
+  background:none;
+  background-color: #699cfa;  
+  border-radius: 30px;
+}
+.seconddivinput{
+  text-align: center;
+}
+
+/************************ Div 5 ***********************/
+/*forthdivbtngo1*/
+.fybpdone{
+  font-size: 25px;
+  font-weight: 500;
+  margin: 15%;
+  animation-delay: 0.1s;
+  -webkit-animation-duration:1.0s;
+  animation-duration:1.0s;
+}
+.fifthimg{
+  width: 90%;
+}
+.fybpcomplete{
+  margin-top: 10%;
 }
