--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,11 +1,11 @@
 <ion-view view-title="All Contacts">
   <ion-content>
-      <div class="card" ng-repeat="contact in phoneContacts">
+      <!-- <div class="card" ng-repeat="contact in phoneContacts">
               <div class="item item-divider">
                 {{ contact.name.formatted }}
               </div>
               <div class="item item-text-wrap">
-                <p><strong>Phone(s) {{contact.phoneNumbers[0].number}}</strong></p>
+                <p><strong>Phone(s)</strong></p>
                 <div ng-repeat="number in contact.phoneNumbers">
                   <p>{{ number.value }}</p>
                 </div>
@@ -14,7 +14,7 @@
                   <p>{{ email.value }}</p>
                 </div>
               </div>
-        </div>
+        </div> -->
         New eseet
   		<ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
 
