--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,6 +1,6 @@
 <ion-view view-title="All Contacts">
   <ion-content>
-      <!-- <div class="card" ng-repeat="contact in phoneContacts">
+      <div class="card" ng-repeat="contact in phoneContacts">
               <div class="item item-divider">
                 {{ contact.name.formatted }}
               </div>
@@ -14,7 +14,7 @@
                   <p>{{ email.value }}</p>
                 </div>
               </div>
-        </div> -->
+        </div>
         New eseet
   		<ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
 
