--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -27,7 +27,7 @@
           <p><h2>{{'My Name'}}</h2></p>
         </ion-item> -->
         <div class="img-circular"></div>
-        <p style="margin-left: 10%"><b>The Name</b></p>
+        <p style="margin-left: 10%"><b>{{username}}</b></p>
         <a href="#/app/home" class="item constColor" menu-close style="color: #ffffff"><span class="icon ion-home"></span>&nbsp;&nbsp;Home</a>
         <a href="#/app/searchfriends" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-ios-search-strong"></span>&nbsp;&nbsp;Search Friends</a>
         <a href="#/app/nearby" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-people"></span>&nbsp;&nbsp;Near By Friends</a>
