--- a/www/css/stylelogin.css
+++ b/www/css/stylelogin.css
@@ -278,3 +278,49 @@ button.btngo4 {
 .fybpcomplete{
   margin-top: 10%;
 }
+
+/* otp popup */
+.popup.popup-showing.active{
+    border-radius: 35%;    
+}
+.popup-title.ng-binding {
+  color: #886fc0;
+  font-size: large;
+}
+.popup-head {
+  border: none;
+}
+.popup-body span {
+  color: #66b1da;
+  text-align: center;
+  margin-left: 15%;
+    margin-right: 15%;
+}
+button.button.col.ng-binding {
+  border-radius: 40px;
+  background: antiquewhite;
+}
+button.button.col.ng-binding.button-positive {
+      border-radius: 40px;
+  background: none;
+  background-image: url('../img/ok1.png');
+  background-size: 75px 75px !important;
+  background-repeat: no-repeat;
+  width: 60px;
+  height: 80px;
+  text-align: center;
+  border: 0;
+  margin: 10px;
+}
+button.button.col.ng-binding.button-default {
+  border-radius: 40px;
+  background: none;
+  border: 0;
+  width: 60px;
+  height: 80px;
+  background-image: url('../img/ok2.png');
+  background-size: 70px 70px !important;
+  background-repeat: no-repeat;
+  text-align: center;
+  margin: 15px;
+}
