--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -26,7 +26,8 @@
           <img style="background-image:url('../img/person.png'); border-radius:80%; background-position:center center; background-size:cover; width:100%; height:100%;">                
           <p><h2>{{'My Name'}}</h2></p>
         </ion-item> -->
-        <div class="img-circular"></div>
+        <div class="img-circular" style="background-image: url('../{{profilePic}}');
+ background-size: cover;"></div>
         <p style="margin-left: 10%"><b>{{username}}</b></p>
         <a href="#/app/home" class="item constColor" menu-close style="color: #ffffff"><span class="icon ion-home"></span>&nbsp;&nbsp;Home</a>
         <a href="#/app/searchfriends" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-ios-search-strong"></span>&nbsp;&nbsp;Search Friends</a>
