--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -27,9 +27,9 @@
           <p><h2>{{'My Name'}}</h2></p>
         </ion-item> -->
         <div class="img-circular">
-          <img src="{{profilePic}}" width="100" height="100">
+          <img src="{{profilePic}}" width="200" height="200">
         </div>
-        <p style="margin-left: 10%;font-size: 18px;text-align: center;align-content: center;"><b>{{username}}</b></p>
+        <p style="margin-left: 20%;font-size: 18px;"><b>{{username}}</b></p>
         <a href="#/app/home" class="item constColor" menu-close style="color: #ffffff"><span class="icon ion-home"></span>&nbsp;&nbsp;Home</a>
         <a href="#/app/searchfriends" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-ios-search-strong"></span>&nbsp;&nbsp;Search Friends</a>
         <a href="#/app/nearby" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-people"></span>&nbsp;&nbsp;Near By Friends</a>
