--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -2,7 +2,9 @@
   <ion-content>
       <div class="card">
       Contacts db:
-      {{arrcc | json}}
+      {{arrc | json}}
+      <br>
+      {{arrc}}
       </div>
       <div class="card" ng-repeat="p in phoneContacts">
       Contacts db:
