--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,6 +1,8 @@
 <ion-view view-title="All Contacts">
   <ion-content>
       <div class="card">
+      mydc {{mydc}}
+      <br>
       Contacts db:
       {{arrc | json}}
       <br>
