--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -4,9 +4,9 @@
       mydc {{mydc}}
       <br>
       </div>
-      <div class="card" ng-repeat="p in phoneContacts">
+      <div class="card" ng-repeat="p in mydc">
       Contacts db:
-      {{p.name}}<br>
+      <b>{{p.name}}</b><br>
       {{p.contact}}
       </div>
       <!-- <div class="card" ng-repeat="contact in phoneContacts">
