--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -4,7 +4,8 @@
       mydc {{mydc}}
       <br>
       </div>
-      <div class="card" ng-repeat="p in mydc">
+      arrcc {{arrcc}}
+      <div class="card" ng-repeat="p in phoneContacts">
       Contacts db:
       <b>{{p.name}}</b><br>
       {{p.contact}}
