--- a/www/templates/abstractpages/sidemenus.html
+++ b/www/templates/abstractpages/sidemenus.html
@@ -20,16 +20,17 @@
 
   <ion-side-menu side="left" style="background-color:#699cfa">
     <ion-content>
+      <div class="img-circular">
+          <img src="{{profilePic}}" width="160" height="160" class="profileLogo">
+      </div>
+      <p style="margin-left: 20%;font-size: 18px;margin-top: 5px"><b>{{username}}</b></p>
       <ul class="list constColor">
         <!-- Note each link has the 'menu-close' attribute so the menu auto closes when clicking on one of these links -->
         <!-- <ion-item class="item item-thumbnail-left constColor" menu-close>  
           <img style="background-image:url('../img/person.png'); border-radius:80%; background-position:center center; background-size:cover; width:100%; height:100%;">                
           <p><h2>{{'My Name'}}</h2></p>
         </ion-item> -->
-        <div class="img-circular">
-          <img src="{{profilePic}}" width="160" height="160">
-        </div>
-        <p style="margin-left: 20%;font-size: 18px;margin-top: 10px"><b>{{username}}</b></p>
+        
         <a href="#/app/home" class="item constColor" menu-close style="color: #ffffff"><span class="icon ion-home"></span>&nbsp;&nbsp;Home</a>
         <a href="#/app/searchfriends" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-ios-search-strong"></span>&nbsp;&nbsp;Search Friends</a>
         <a href="#/app/nearby" class="item constColor" style="color: #ffffff" menu-close><span class="icon ion-android-people"></span>&nbsp;&nbsp;Near By Friends</a>
