--- a/www/templates/contacts.html
+++ b/www/templates/contacts.html
@@ -1,18 +1,19 @@
 <ion-view view-title="All Contacts">
   <ion-content>
-      <div class="card">
+      <!-- <div class="card">
       mydc {{items | json}}
       <br>
-      </div>
-      <div class="card" ng-repeat="contact in items">
+      </div> -->
+
+      <!-- <div class="card" ng-repeat="contact in items">
           <div class="item item-divider">
             {{contact.uname}}
           </div>
           <div class="item item-text-wrap">
           {{contact.contact}}<br>
-          Joined at, {{contact.created}}
+          
           </div>
-              <!-- <div class="item item-divider">
+              <div class="item item-divider">
                 {{ contact.name.formatted }}
               </div>
               <div class="item item-text-wrap">
@@ -24,12 +25,13 @@
                 <div ng-repeat="email in contact.emails">
                   <p>{{ email.value }}</p>
                 </div>
-              </div> -->
+              </div>
         </div>
-        New eseet
-  		<!-- <ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
+        New eseet -->
 
-           <ion-item ng-repeat="contact in phoneContacts"
+  		<ion-list show-delete="data.showDelete" show-reorder="data.showReorder">
+
+           <ion-item ng-repeat="contact in items"
                      item="item"
                      href="#" class="item-remove-animate">
 
@@ -38,13 +40,14 @@
                        <img src="img/ionic.png" width="45" height="45">
                      </div>
                       <div class="col col-75" style="left:0">
-                       <h2>{{ contact.name.formatted }}</h2>
-                       <div ng-repeat="number in contact.phoneNumbers">
+                       <h2>{{ contact.uname }}</h2>
+                       <p>{{contact.contact}}</p>
+                       <!-- <div ng-repeat="number in contact.phoneNumbers">
                           <p><i class="icon ion-ios-telephone-outline"></i>{{ number.value }}</p>
                        </div>
                        <div ng-repeat="email in contact.emails">
                         <p><i class="icon ion-ios-pricetags-outline"></i>{{ email.value }}</p>
-                       </div>
+                       </div> -->
                        </div>
                      </div>
              <ion-delete-button class="ion-minus-circled"
@@ -61,7 +64,7 @@
              <ion-reorder-button class="ion-navicon" on-reorder="moveItem(item, $fromIndex, $toIndex)"></ion-reorder-button>
            </ion-item>
 
-         </ion-list> -->
+         </ion-list>
 
   </ion-content>
 </ion-view>
